Bug 257426 - KCrash just after successful transaction download via HBCI
Summary: KCrash just after successful transaction download via HBCI
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5
Platform: MacPorts macOS
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-20 16:54 UTC by Marko Käning
Modified: 2010-11-21 09:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch to avoid crash (516 bytes, patch)
2010-11-21 01:40 UTC, Marko Käning
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marko Käning 2010-11-20 16:54:06 UTC
Version:           4.5 (using KDE 4.5.3) 
OS:                OS X

5:2010/11/20 16-27-04:(null)(19265):/opt/macports-test/var/macports/build/_Users_marko_WC_MacPorts_ports_kde_kmymoney4-devel/work/kmymoney/kmymoney/plugins/kbanking/views/kbjobview.cpp:  122: Job queue updated
6:2010/11/20 16-27-04:(null)(19265):/opt/macports-test/var/macports/build/_Users_marko_WC_MacPorts_ports_kde_kmymoney4-devel/work/kmymoney/kmymoney/plugins/kbanking/mymoneybanking.cpp: 1067: Importing account...
6:2010/11/20 16-27-04:(null)(19265):/opt/macports-test/var/macports/build/_Users_marko_WC_MacPorts_ports_kde_kmymoney4-devel/work/kmymoney/kmymoney/plugins/kbanking/mymoneybanking.cpp: 1123: Importing balance
Assertion failed: (se), function GWEN_StringListEntry_Next, file stringlist.c, line 359.
KCrash: Application 'kmymoney' crashing...
KCrash: Attempting to start  from kdeinit
sock_file=/Users/marko/Library/Preferences/KDE/socket-markos-imac/kdeinit4__tmp_launch-c31XRZ_org.x_0
Warning: connect() failed: : No such file or directory
KCrash: Attempting to start  directly
KCrash failed to exec(), errno = 2


Reproducible: Always

Steps to Reproduce:
Just download transactions.

Actual Results:  
After closing transaction dialog the KCrash happens.
Comment 1 Marko Käning 2010-11-21 01:40:27 UTC
Created attachment 53594 [details]
Patch to avoid crash

Unwanted doubled line removed fixes this issue
Comment 2 Marko Käning 2010-11-21 01:42:38 UTC
Oops, perhaps I shouldn't change the status of the bug to resolved fixed, but rather use waitingforinfo and let the devs close this but?!???
Comment 3 Alvaro Soliverez 2010-11-21 01:50:24 UTC
This should be reported to AqBanking, since the crash seems to be in gwenhyfar classes.
Comment 4 Thomas Baumgart 2010-11-21 09:39:15 UTC
SVN commit 1199239 by tbaumgart:

Thanks to Marko who found this one. No need to backport because code is OK in the 4.5 branch.

BUG: 257426

 M  +0 -1      mymoneybanking.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1199239