Thanks to Marko who found this one. No need to backport because code is OK in the 4.5 branch.

BUG: 257426

svn path=/trunk/extragear/office/kmymoney/; revision=1199239